# LibMath

./: .gitattributes  .gitignore  LICENSE  README.md  Statistics.cpp  Statistics.h  Vector.cpp
asm_x86/: main.c  powers.asm  rdtsc.asm
asm_x86/libmath.xcodeproj/: project.pbxproj
asm_x86/libmath.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
asm_x86_64/: powers.asm  vector.asm
asm_x86_64/libmath.xcodeproj/: project.pbxproj
c/: Distance.c  Distance.h  KMeans.c  KMeans.h  Matrix.c  Matrix.h  Powers.c  Powers.h  Signals.c  Signals.h  SquareMatrix.c  SquareMatrix.h  Statistics.c  Statistics.h  Vector.c  Vector.h  main.c
c/libmath.xcodeproj/: project.pbxproj
cpp/: BigInt.cpp  BigInt.h  CMakeLists.txt  Calculus.cpp  Calculus.h  Distance.cpp  Distance.h  Double.cpp  Double.h  Graphics.cpp  Graphics.h  KMeans.cpp  KMeans.h  Matrix.cpp  Matrix.h  Peaks.cpp  Peaks.h  Powers.cpp  Powers.h  Prime.cpp  Prime.h  Signals.cpp  Signals.h  SquareMatrix.cpp  SquareMatrix.h  Statistics.cpp  Statistics.h  Vector.cpp  Vector.h  main.cpp
cpp/libmath.xcodeproj/: project.pbxproj
data/: 10_pullups.csv  florida.csv
java/: pom.xml
java/src/main/java/: CsvReader.java  GraphPeak.java  GraphPoint.java  LibMathTests.java  Peaks.java  (+1 more)
julia/: Distance.jl  LibMathTests.jl  Peaks.jl  Powers.jl  Signals.jl
python/: distance.py  graphics.py  kmeans.py  main.py  peaks.py  signals.py  statistics.py
rust/: Cargo.toml
rust/src/: SquareMatrix.rs  distance.rs  graphics.rs  kmeans.rs  lib.rs  main.rs  peaks.rs  powers.rs  signals.rs  square_matrix.rs  statistics.rs  vector.rs
